--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 /**
 * Imports
 */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic');
 
 /**
 * Variables
@@ -29,6 +29,7 @@ html {
   color: #3c3c3c;
 }
 .container {
+  position: relative;
   width: 90%;
   max-width: 1140px;
   display: block;
@@ -37,6 +38,23 @@ html {
 
 header {
   min-height: 100vh;
+  .logo {
+    position: absolute;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    background-color: #fff;
+    padding: 0.5em;
+    box-shadow: 0px 0px 20px -5px #333333;
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+      img {
+        width: 130px;
+      }
+    }
+  }
   .top-header {
     background-color: $primary-color;
     width: 100%;
@@ -75,7 +93,7 @@ header {
         display: flex;
 
         li {
-					position: relative;
+          position: relative;
           padding: 0.5em;
           transition: all 0.14s;
           &:last-child {
@@ -91,7 +109,7 @@ header {
             text-decoration: none;
             text-transform: uppercase;
             font-size: 0.8em;
-            font-weight: 100;
+            font-weight: 400;
           }
         }
       }
@@ -99,8 +117,36 @@ header {
   }
   .image-header {
     width: 100%;
-    // background-image: url('./../image/screen-1.jpg');
-    background-size: cover;
-    background-position: center;
+    position: relative;
+    // background-color: $primary-color;
+    background-image: url("./../image/screen-1.jpg");
+    background-size: contain;
+    background-position: center right;
+    background-repeat: no-repeat;
+
+    .overlay{
+      position: absolute;
+      z-index: 9;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(146,198,169, 0.5);
+    }
+    .container{
+      z-index: 11;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      h1{
+        text-transform: uppercase;
+        color: #ffffff;
+        font-weight: 700;
+        line-height: 40px;
+        // text-shadow: 1px 1px 15px #333333;
+        color: $primary-color;
+      }
+    }
   }
 }
