--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,7 +40,7 @@ html {
 }
 
 .preload {
-  position: absolute;
+  position: fixed;
   z-index: 1000 !important;
   top: 0;
   left: 0;
@@ -120,8 +120,6 @@ header {
           &:last-child {
             padding-right: 0;
           }
-          &:hover {
-          }
           a {
             display: block;
             width: 100%;
@@ -155,10 +153,54 @@ header {
         font-weight: 100;
         line-height: 40px;
         color: $primary-color;
+        display: block;
+        background-color: #ffffff;
+        width: 33%;
+        padding: 0.5em;
+        padding-left: 0;
       }
     }
   }
 }
 .services{
   min-height: 100vh;
+  margin-top: 15vh;
+  h2{
+    text-transform: uppercase;
+    font-weight: 100;
+    text-align: center;
+  }
+  .container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 0.5em;
+    align-content: center; 
+
+    .service{
+      a{
+        padding: 0;
+        margin: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        text-decoration: none;
+        img{
+          width: 100%;
+          height: 100%;
+        }
+        p{
+          position: absolute;
+          width: 100%;
+          bottom: 0;
+          left: 0;
+          margin: 0;
+          padding: 0.5em;
+          background-color: rgba(255, 255, 255, 0.8);
+          color: #000;
+        }
+      }
+    }
+  }
 }
