--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,14 @@
 /**
 * Imports
 */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic');
 
 /**
 * Variables
 */
 $primary-color: #92c6a9;
 
-$open-sans: "Open Sans", sans-serif;
+$open-sans: 'Open Sans', sans-serif;
 
 /**
 * Main styles
@@ -137,7 +137,7 @@ header {
   .image-header {
     width: 100%;
     position: relative;
-    background-image: url("./../image/screen-1.jpg");
+    background-image: url('./../image/screen-1.jpg');
     background-size: contain;
     background-position: center right;
     background-repeat: no-repeat;
@@ -162,23 +162,23 @@ header {
     }
   }
 }
-.services{
+.services {
   min-height: 100vh;
   margin-top: 15vh;
-  h2{
+  h2 {
     text-transform: uppercase;
     font-weight: 100;
     text-align: center;
   }
-  .container{
+  .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(100px, auto);
     grid-gap: 0.5em;
-    align-content: center; 
+    align-content: center;
 
-    .service{
-      a{
+    .service {
+      a {
         padding: 0;
         margin: 0;
         display: block;
@@ -186,11 +186,11 @@ header {
         height: 100%;
         position: relative;
         text-decoration: none;
-        img{
+        img {
           width: 100%;
           height: 100%;
         }
-        p{
+        p {
           position: absolute;
           width: 100%;
           bottom: 0;
@@ -202,5 +202,79 @@ header {
         }
       }
     }
+  }
+}
+
+.about-us {
+  min-height: 100vh;
+  position: relative;
+  background-image: url('./../image/screen-2.jpg');
+  background-size: contain;
+  background-position: left;
+  background-repeat: no-repeat;
+  .container {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    .message {
+      padding: 5em;
+      background-color: #fff;
+      border-radius: 4px;
+      font-weight: 100;
+      text-align: center;
+      text-transform: uppercase;
+      h3 {
+        font-weight: 100;
+      }
+    }
+  }
+}
+
+.personal {
+  min-height: 100vh;
+
+  .container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    h3{
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 100;
+    }
+
+    div {
+      div {
+        padding: 1em;
+        img {
+          display: block;
+          width: 175px;
+          margin: 0 auto;
+        }
+        h4 {
+          font-weight: 100;
+        }
+        p {
+          font-size: 0.7em;
+        }
+        &:first-child {
+          padding-left: 0;
+        }
+        &:last-child {
+          padding-right: 0;
+        }
+      }
+    }
+  }
+}
+
+footer{
+  background-color: #333;
+  color: #fff;
+  p{
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-size: 0.7em;
   }
 }
