--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,8 +54,6 @@ html {
   align-items: center;
   img {
     display: block;
-    width: 400px;
-    height: 300px;
   }
 }
 
@@ -139,7 +137,7 @@ header {
   .image-header {
     width: 100%;
     position: relative;
-    background-image: url('./../image/screen-1.jpg');
+    background-image: url('./../images/screen-1.jpg');
     background-size: contain;
     background-position: center right;
     background-repeat: no-repeat;
@@ -210,7 +208,7 @@ header {
 .about-us {
   min-height: 100vh;
   position: relative;
-  background-image: url('./../image/screen-2.jpg');
+  background-image: url('./../images/screen-2.jpg');
   background-size: contain;
   background-position: left;
   background-repeat: no-repeat;
